[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-converter"
version = "1.0.0"
description = "A zero-dependency Python module for inspecting and converting Claude Code session files '.jsonl' into the 'messages' format expected by Hugging Face Transformers."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Fredy Rivera", email = "fredyriveraacevedo13@gmail.com"}
]
keywords = [
    "ai",
    "claude",
    "transformers"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Topic :: Software Development :: Build Tools",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "mypy",
]

[project.urls]
"Homepage" = "https://github.com/FredyRivera-dev/claude_converter"
"Issues" = "https://github.com/FredyRivera-dev/claude_converter/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["claude_converter", "claude_converter.*"]